Corrected z-index bug of chrom adding position: relative.

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -97,6 +97,7 @@ ul.thumbnails {
           -moz-border-radius: 33px;
           -webkit-border-radius: 33px;
           padding-top: 6px;
+          position: relative;
           transition: background-color 0.3s ease-in-out 0.12s, transform 0.3s;
           -webkit-transition: background-color 0.3s ease-in-out 0.12s, -webkit-transform 0.3s;
           -moz-transition: background-color 0.3s ease-in-out 0.12s, -moz-transform 0.3s;
